// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Handles an import that is later exported 1`] = `
Object {
  "nodes": Array [
    Object {
      "end": 26,
      "start": 0,
      "type": "import",
    },
    Object {
      "default": true,
      "end": 49,
      "start": 28,
      "type": "export",
    },
  ],
}
`;

exports[`Handles basic usecase of default export 1`] = `
Object {
  "nodes": Array [
    Object {
      "default": true,
      "end": 46,
      "start": 0,
      "type": "export",
    },
  ],
}
`;

exports[`Handles const exports 1`] = `
Object {
  "nodes": Array [
    Object {
      "end": 41,
      "start": 0,
      "type": "export",
    },
  ],
}
`;

exports[`Handles multiline default exports 1`] = `
Object {
  "nodes": Array [
    Object {
      "default": true,
      "end": 49,
      "start": 0,
      "type": "export",
    },
  ],
}
`;

exports[`Handles multiline exports 1`] = `
Object {
  "nodes": Array [
    Object {
      "end": 43,
      "start": 0,
      "type": "export",
    },
  ],
}
`;

exports[`Separates import from the default export 1`] = `
Object {
  "nodes": Array [
    Object {
      "end": 23,
      "start": 0,
      "type": "import",
    },
    Object {
      "default": true,
      "end": 70,
      "start": 24,
      "type": "export",
    },
  ],
}
`;
